# ActionNote

./: CMakeLists.txt  README.md
include/: action_item.h  dossier.h  dossier_manager.h  jstring.h  main.h  meeting.h  meeting_element.h  meeting_manager.h  timeutil.h
src/: action_item.cpp  dossier.cpp  dossier_manager.cpp  exec.cpp  jstring.cpp  main.cpp  meeting.cpp  meeting_manager.cpp
test/: actionnote-2019-12-06.note  meeting-2019-09-10-wb.mt
test/ActionNoteTest/: test_action_item.cpp  test_aes_integration.cpp  test_dossier.cpp  test_dossier_manager.cpp  test_jstring.cpp  test_main.cpp  test_meeting.cpp  test_meeting_manager.cpp
test/encrypted_dossier_master/: 00001.txt  00002.txt
test/meeting_manager/: meeting-2019-09-10.mt  meeting-2019-09-14.txt
test/meeting_manager_actions/: actionnote-2019-12-06.note  meeting-2019-09-13.mt
test/meeting_manager_actions_writeback/: actionnote-2019-12-06.note
test/meeting_manager_writeback/: meeting-2019-09-13-mod.mt  meeting-2019-09-13-mod.txt  meeting-2019-09-13-orig.mt
test/runner_test/dossier/: 00001.txt
test/unencrypted_dossier_master/: 00003.txt
